syntax = "proto3";

package auth;

option go_package = ".";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(TokenRequest) returns (TokenResponse);
  rpc RefreshToken(TokenRequest) returns (TokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
  string userId = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string userId = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string userId = 2;
  string newToken = 3;
}
